[tool.poetry]
name = "PicTrace"
version = "0.8.2"
description = "🔎 PicTrace is an efficient image matching platform leveraging structural similarity and keypoint algorithms for fast, accurate image searches. It allows direct uploads or URL submissions, quickly scanning a large database to find similar images. With asynchronous processing, PicTrace delivers a smooth and quick visual search experience."
authors = ["Sviatoslav König <reveni324@gmail.com"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
fastapi = "^0.104.0"
uvicorn = "0.23.2"
image = "^1.5.33"
aiohttp = "^3.9.3"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
scikit-image = "^0.22.0"
tensorflow = "^2.16.1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
